[API] Use BufferedReader when creating FileList to speed-up reading. Close Streams at the end.